assets/css/portfolio.css
/* ... */
figure.snip1321 figcaption {
  top: 50%;
  left: 20px;
  right: 20px;
  position: absolute;
  opacity: 0;
  z-index: 1;
}
figure.snip1321 h4 {
    margin-top: 15px;
  margin-bottom: 5px;
  color: #232323;
}
figure.snip1321 span {
    font-size: 14px;
    font-style: italic;
    display: block;
    color: #7a7a7a;
}
figure.snip1321 i {
  position: relative!important;
  font-size: 18px;
  background-color: #a43f49;
  width: 100%;
  height: 40px;
  display: inline-block;
  text-align: center;
  line-height: 40px;
  border-radius: 5px;
  color: #fff;
}
figure.snip1321:after {
  background-color: #ffffff;
  position: absolute;
  content: "";
  display: block;
  top: 20px;
  left: 20px;
  right: 20px;
  bottom: 20px;
  -webkit-transition: all 0.4s ease-in-out;
  transition: all 0.4s ease-in-out;
  -webkit-transform: rotateX(-90deg);
  transform: rotateX(-90deg);
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  opacity: 0;
}
figure.snip1321 a {
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: 1;
}
figure.snip1321:hover figcaption,
figure.snip1321.hover figcaption {
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
  opacity: 1;
  -webkit-transition-delay: 0.2s;
  transition-delay: 0.2s;
}
figure.snip1321:hover:after,
figure.snip1321.hover:after {
  -webkit-transform: rotateX(0);
  transform: rotateX(0);
  opacity: 0.9;
}


/* Contact Me */

section.contact-me {
    border-bottom: none;
}

#contact input {
    background-color: rgba(250,250,250,0.1);
    margin-bottom: 30px;
    color: #fff;
    font-size: 14px;
    height: 40px;
    line-height: 40px;
    width: 100%;
    padding-left: 15px;
}

#contact input:focus {
    outline: none;
    box-shadow: none;
}

#contact textarea {
    background-color: rgba(250,250,250,0.1);
    border-radius: 0px;
    margin-bottom: 30px;
    color: #fff;
    font-size: 14px;
    height: 180px;
    max-height: 220px;
    line-height: 40px;
    width: 100%;
    padding-left: 15px;
}

#contact textarea:focus {
    outline: none;
    box-shadow: none;
}

#contact {
    text-align: center;
}

.form-control{
    border: 2px solid #187672;
	border-radius: 50px;
}

@media screen and (max-width: 1680px) {

    .section {
        color: #fff;
        width: 65%;
        right: 5%;
        left: 30%;
    }
}

@media screen and (max-width: 1680px) and (min-width: 846px) { 
    .menu .social-network ul li a {
        width: 36px;
        height: 36px;
        line-height: 36px;
    }

    .menu .social-network ul li {
        margin: 0;
    }

    .menu .image {
        margin-top: 60px;
    }
}

@media screen and (min-width:1295px){
	figure{
		height:350px!important;
	}
	
}

@media screen and (min-width:845px){
	figure{
		height:300px;
	}
	
}

@media screen and (max-width: 1280px) {
    .menu {
        left: 0%;
    }

    .right-image-post h4,
    .left-image-post h4 {
        margin-top: 0px;
    }

    .right-image-post p,
    .left-image-post p {
        margin-top: 15px;
    }

    .right-image-post .white-button,
    .left-image-post .white-button {
        margin-top: 25px;
    }

}

.menu .container {
    padding-left: 0;
    padding-right: 0;
}

@media screen and (max-width: 1280px) and (min-width: 846px) {
    .menu {
        width: 25%;
    }
}

#menu-toggle,
#menu-close {
    display: none;
}  

@media screen and (max-width: 845px) {        
    #menu-toggle,
    #menu-close {
        display: inline-block;
    }    
	
	.timeline .timeline-container {
        padding-left: 50px;
        margin-bottom: 50px;
        position: relative;
        background-color: inherit;
        width: 100%;
}

    .menu {        
        width: 320px;
		background: linear-gradient(0deg, #0000ff00, #046a7a);
		background-image:url('assets/images/menubg.png');
        -webkit-transform: translateX(-100%) !important;
        transform: translateX(-100%) !important;
        transition: -webkit-transform 233ms cubic-bezier(0, 0, 0.21, 1);
        transition: transform 233ms cubic-bezier(0, 0, 0.21, 1);
        transition: transform 233ms cubic-bezier(0, 0, 0.21, 1), -webkit-transform 233ms cubic-bezier(0, 0, 0.21, 1);
    }
	

    .menu .image {
        margin-top: 40px;        
    }

    .menu .image img {
        width: 120px;
        height: 120px;
    }

    .menu .author-content {
        margin: 20px 0px 40px 0px;
    }

    .menu .container {
        padding-left: 15px;
        padding-right: 15px;
    }

    .menu.open {
        display: inline-block;
        -webkit-transform: translateX(0) !important;
                transform: translateX(0) !important;
    }

    .responsive-nav {
        display: inline-block;
    }
    .section {
        width: 94%;
        right: 3%;
        left: 3%;
    }
    .isotope-item {
        width: 94%;
        margin: 3%;
    }
    .left-image-post img {
        margin-bottom: 30px;
    }
    .right-image-post img {
        margin-top: 30px;
    }
    .isotope-item {
        border-bottom: none;
        text-align: center;
    }
    .isotope-toolbar {
        margin-bottom: 20px;
    }
}

